--- a/F103-ESC.ioc
+++ b/F103-ESC.ioc
@@ -34,29 +34,30 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP6=TIM2
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB11
-Mcu.Pin11=PB12
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
 Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB2
-Mcu.Pin9=PB10
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PA8
 Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -74,16 +75,17 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM1_BRK_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
+PA10.Signal=S_TIM1_CH3
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Signal=S_TIM2_CH1_ETR
 PA2.Signal=ADCx_IN2
 PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA3.GPIO_Label=LED
@@ -91,41 +93,28 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA3.Locked=true
 PA3.PinState=GPIO_PIN_RESET
 PA3.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Speed,GPIO_Label
+PA5.GPIO_Label=AL
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Speed,GPIO_Label
+PA6.GPIO_Label=BL
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA7.GPIO_Label=CL
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA7.Locked=true
+PA7.PinState=GPIO_PIN_RESET
+PA7.Signal=GPIO_Output
 PA8.Signal=S_TIM1_CH1
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Speed,GPIO_Label
-PB0.GPIO_Label=AH
-PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Speed,GPIO_Label
-PB1.GPIO_Label=AL
-PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB1.Locked=true
-PB1.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Speed,GPIO_Label
-PB10.GPIO_Label=BL
-PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB10.Locked=true
-PB10.Signal=GPIO_Output
-PB11.GPIOParameters=GPIO_Speed,GPIO_Label
-PB11.GPIO_Label=CH
-PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB11.Locked=true
-PB11.Signal=GPIO_Output
-PB12.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PB12.GPIO_Label=CL
-PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB12.Locked=true
-PB12.PinState=GPIO_PIN_RESET
-PB12.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PB2.GPIO_Label=BH
-PB2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB2.Locked=true
-PB2.PinState=GPIO_PIN_RESET
-PB2.Signal=GPIO_Output
+PA9.Signal=S_TIM1_CH2
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -158,7 +147,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -187,15 +176,27 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
-SH.S_TIM1_CH1.1=TIM1_CH1,Input_Capture2_from_TI1
-SH.S_TIM1_CH1.ConfNb=2
-TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM1.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
-TIM1.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,ICPolarity_CH2,Prescaler,Period
-TIM1.Period=0xFFFF - 1
-TIM1.Prescaler=8 - 1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1_ETR.1=TIM2_CH1,Input_Capture2_from_TI1
+SH.S_TIM2_CH1_ETR.ConfNb=2
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
+TIM1.Period=7200 - 1
+TIM1.Prescaler=0
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM2.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
+TIM2.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Prescaler,Period,ICPolarity_CH2
+TIM2.Period=0xFFFF
+TIM2.Prescaler=72 - 1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
