--- a/F103-ESC.ioc
+++ b/F103-ESC.ioc
@@ -1,71 +1,40 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,NbrOfConversion,ContinuousConvMode,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion
-ADC1.NbrOfConversion=3
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Rank-6\#ChannelRegularConversion=2
-ADC1.Rank-7\#ChannelRegularConversion=3
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
-ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
-ADC1.master=1
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC1
-Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=TIM1
+Mcu.IP4=TIM2
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PA15
-Mcu.Pin15=PB6
-Mcu.Pin16=PB7
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PA8
-Mcu.PinsNb=19
+Mcu.Pin10=PA14
+Mcu.Pin11=PA15
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PA3
+Mcu.Pin3=PA7
+Mcu.Pin4=PB0
+Mcu.Pin5=PB1
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -75,42 +44,30 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0-WKUP.Signal=ADCx_IN0
-PA1.Signal=ADCx_IN1
 PA10.Signal=S_TIM1_CH3
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
-PA2.Signal=ADCx_IN2
 PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA3.GPIO_Label=LED
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA3.Locked=true
 PA3.PinState=GPIO_PIN_RESET
 PA3.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Speed,GPIO_Label
-PA5.GPIO_Label=AL
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA5.Locked=true
-PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Speed,GPIO_Label
-PA6.GPIO_Label=BL
-PA6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA6.Locked=true
-PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PA7.GPIO_Label=CL
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Locked=true
-PA7.PinState=GPIO_PIN_RESET
-PA7.Signal=GPIO_Output
+PA7.Mode=PWM Generation1 CH1 CH1N
+PA7.Signal=TIM1_CH1N
 PA8.Signal=S_TIM1_CH1
 PA9.Signal=S_TIM1_CH2
+PB0.Mode=PWM Generation2 CH2 CH2N
+PB0.Signal=TIM1_CH2N
+PB1.Mode=PWM Generation3 CH3 CH3N
+PB1.Signal=TIM1_CH3N
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
@@ -147,9 +104,9 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.ADCFreqValue=12000000
-RCC.ADCPresc=RCC_ADCPCLK2_DIV6
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+RCC.ADCFreqValue=9000000
+RCC.ADCPresc=RCC_ADCPCLK2_DIV8
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=36000000
@@ -170,32 +127,25 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.ConfNb=1
-SH.ADCx_IN2.0=ADC1_IN2,IN2
-SH.ADCx_IN2.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
-SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
-SH.S_TIM2_CH1_ETR.1=TIM2_CH1,Input_Capture2_from_TI1
-SH.S_TIM2_CH1_ETR.ConfNb=2
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2
-TIM1.Period=7200 - 1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM_Input_1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
+TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCFastMode_PWM-PWM Generation2 CH2 CH2N,OCFastMode_PWM-PWM Generation3 CH3 CH3N,OCFastMode_PWM-PWM Generation1 CH1 CH1N,OCNPolarity_1
+TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCFAST_ENABLE
+TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCFAST_ENABLE
+TIM1.OCFastMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCFAST_ENABLE
+TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
+TIM1.Period=2000 - 1
 TIM1.Prescaler=0
-TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM2.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
-TIM2.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Prescaler,Period,ICPolarity_CH2
-TIM2.Period=0xFFFF
+TIM2.IPParameters=Prescaler
 TIM2.Prescaler=72 - 1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
