--- a/F103-ESC.ioc
+++ b/F103-ESC.ioc
@@ -47,20 +47,19 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB10
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_ADC1_TempSens_Input
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_ADC1_TempSens_Input
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -68,7 +67,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=23
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -114,7 +113,6 @@ PB0.Mode=PWM Generation2 CH2 CH2N
 PB0.Signal=TIM1_CH2N
 PB1.Mode=PWM Generation3 CH3 CH3N
 PB1.Signal=TIM1_CH3N
-PB10.Signal=S_TIM2_CH3
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
@@ -190,8 +188,6 @@ SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM_Input_1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
-SH.S_TIM2_CH3.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
@@ -202,10 +198,8 @@ TIM1.OCFastMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCFAST_ENABLE
 TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
 TIM1.Period=2000 - 1
 TIM1.Prescaler=0
-TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Prescaler,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3
+TIM2.IPParameters=Prescaler
 TIM2.Prescaler=72 - 1
-TIM2.Pulse-PWM\ Generation3\ CH3=1500
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
